[gd_scene load_steps=14 format=3 uid="uid://cm7liy7kfd6yw"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_40gf5"]
[ext_resource type="SystemFont" uid="uid://i0jcaok61go0" path="res://Scenes/UI/new_system_font.tres" id="1_qkoix"]
[ext_resource type="AudioStream" uid="uid://s8uflfhf4vws" path="res://Resources/Sounds/switch.ogg" id="4_774le"]
[ext_resource type="Theme" uid="uid://crqddcmktcgn5" path="res://Scenes/UI/main_theme.tres" id="5_f7w8n"]
[ext_resource type="AudioStream" uid="uid://dq6aqeo6p4gfs" path="res://Resources/Sounds/select.ogg" id="5_h3w1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb7hx"]
bg_color = Color(0.443137, 1, 0.670588, 0.207843)
corner_radius_top_left = 10
corner_radius_top_right = 20
corner_radius_bottom_right = 10
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6821n"]
bg_color = Color(0.317647, 0.721569, 0.478431, 0.207843)
corner_radius_top_left = 20
corner_radius_top_right = 10
corner_radius_bottom_right = 20
corner_radius_bottom_left = 10

[sub_resource type="PackedScene" id="PackedScene_2cyt3"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Credits", "layout_mode", "anchors_preset", "scale", "Control", "ColorRect", "offset_right", "offset_bottom", "color", "Label", "theme_override_fonts/font", "theme_override_font_sizes/font_size", "text", "horizontal_alignment", "vertical_alignment", "Back_button", "offset_left", "offset_top", "theme_override_styles/normal", "theme_override_styles/hover", "icon_alignment", "Button"),
"node_count": 4,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 4, 0, -1, 3, 1, 0, 2, 1, 3, 2, 0, 0, 0, 5, 5, -1, 4, 1, 1, 6, 3, 7, 4, 8, 5, 0, 0, 0, 9, 9, -1, 8, 1, 1, 6, 3, 7, 4, 10, 6, 11, 7, 12, 8, 13, 9, 14, 9, 0, 0, 0, 21, 15, -1, 11, 1, 1, 16, 10, 17, 11, 6, 12, 7, 13, 10, 6, 11, 7, 18, 14, 19, 15, 12, 16, 20, 9, 0),
"variants": [3, 0, Vector2(1.113, 1.113), 1154.0, 646.0, Color(0, 0, 0, 0.482353), ExtResource("1_qkoix"), 50, "Wonder Forest
Made by ThuderPlay Studio

Programmers:
Ohan
KadinCarlton

Designer
Abhi", 1, 47.0, 555.0, 276.0, 618.0, SubResource("StyleBoxFlat_bb7hx"), SubResource("StyleBoxFlat_6821n"), "Back"],
"version": 3
}

[sub_resource type="LabelSettings" id="LabelSettings_r775n"]
font = ExtResource("1_qkoix")
font_size = 60
font_color = Color(0.803922, 0.392157, 0.341176, 1)

[sub_resource type="InputEventKey" id="InputEventKey_do72y"]
device = -1
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_8vsoa"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_3dxwi"]
events = [SubResource("InputEventKey_do72y"), SubResource("InputEventKey_8vsoa")]

[sub_resource type="ViewportTexture" id="ViewportTexture_i65v4"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40gf5")
Credit_scene = SubResource("PackedScene_2cyt3")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "SAIL OR FAIL"
label_settings = SubResource("LabelSettings_r775n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Start_button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_f7w8n")
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_3dxwi")
text = "START"
icon = SubResource("ViewportTexture_i65v4")
icon_alignment = 1

[node name="Quit_button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_f7w8n")
theme_override_font_sizes/font_size = 40
text = "QUIT"
icon_alignment = 1

[node name="sound" type="Node" parent="."]

[node name="button_hover_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("4_774le")
max_polyphony = 2

[node name="button_clicked_sound" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("5_h3w1m")
max_polyphony = 2

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Start_button" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Start_button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Quit_button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Quit_button" to="." method="_on_quit_button_pressed"]
